28. Draw border around all dialog buttons.
29. Indicate current track in browse view.
30. Use current accent colour for screensaver.
31. Update screensaver options; disabled, moving clock, fixed clock, blank
    screen.
32. If 'Play shuffled' is enabled then give this button priority over
    'Append'.
33. Add 'Go to artist' to album menu if not browsed from artist.

5.11.4
------
1. Fix listing random mixes on macOS - thanks to EelcoV.
2. Don't sort search results, use order as supplied from LMS.
3. Fix other apps showing in 'TuneIn' when set to combine radio and apps.

5.11.3
------
1. Add 'Play shuffled' for remote playlists.
2. Fix disabling of playlist images.
3. Add emblem for 'iBroadcast'.
4. Fix/work-around issues with using Default for server-settings when LMS is
   on piCorePlayer.

5.11.2
------
1. Update icon mapping for 'LyrPlay' due to its 'Model' change.
2. Fix scan progress page when opening from 'Information' dialog.
3. Fix update details page.
4. Show track ratings in playlists.

5.11.1
------
1. Improve accuracy of list 'Scroll to'.
2. Remove 'Del' shortcut, as its breaking A-Z jumplist.
3. Use 'apple' icon for 'LyrPlay'.
4. Fix/work-around issues with using Default for server-settings and having
   custom actions.

5.11.0
------
 1. Add support for extended meta-data in SlimBrowse commands.
 2. Move 'Sleep all' and 'Create group player' into menu of 'Manager players'
    dialog.
 3. Add 'Clear queue', 'Switch off', and 'Switch on' for all players in menu
    of 'Manager players' dialog.
 4. If using playlist images, then add an overlay icon top-left for favourited
    playlists.
 5. Enable playlist images by default.
 6. Default to grid view.
 7. Re-add notification support, removed in 4.0.0, as used by some plugins.
 8. Click on MAI header to show a 'Scroll to' dialog allowing to scroll to
    specific sections.
 9. For touch devices clicking on MAI header always shows 'Scroll to' dialog
    instead of scrolling to artist under touch.